--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.1",
     "react-leaflet": "^4.2.1",
     "leaflet": "^1.9.4",
     "typescript": "^5.0.0"
